--- a/languages/clojure.org
+++ b/languages/clojure.org
@@ -16,6 +16,7 @@ Tools:
 Clojure Toolbox: https://www.clojure-toolbox.com/
 EDN (extensible data notation): https://clojure.github.io/clojure/clojure.edn-api.html
 
+- https://github.com/mfikes/esprit ESP
 - Transforming Data with ClojureScript¶ https://langintro.com/cljsbook/
 - https://github.com/magomimmo/modern-cljs
 - https://www.cs.utexas.edu/users/novak/cs378contents.html
