--- a/languages/rust.org
+++ b/languages/rust.org
@@ -1,3 +1,9 @@
+- https://www.forrestthewoods.com/blog/learning-rust-via-advent-of-code/
+- https://www.forrestthewoods.com/blog/solving-advent-of-code-in-under-a-second/
+- https://lucumr.pocoo.org/2021/11/14/abusing-serde/
+- https://github.com/not-fl3/macroquad
+- https://github.com/martinszy/rustelbrot
+- https://docs.rs/nannou/latest/nannou/
 - https://github.com/sagiegurari/cargo-make
 - https://github.com/burtonageo/cargo-bundle
 - https://github.com/glium/glium
@@ -1311,6 +1317,8 @@ by generics to the concrete for the type.
   #+end_src
 
 *** Lifetimes: Validating references with it
+* TODO Article: 2018 - You Can't Rust That
+  https://lucumr.pocoo.org/2018/3/31/you-cant-rust-that/
 * Learn
 - https://github.com/sger/RustBooks
 - https://github.com/mre/idiomatic-rust
